added transition to header and added logo and also moved to main and added div and wrapper there

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <menu class="navigation-header">
 
                 <div class="icon-heroku">
-                    <a href="#" alt=""><img src="https://via.placeholder.com/143x40" alt=""></a>
+                    <a href="#" alt=""><img src="/assets/Image20230701200706.png" alt="icon heroku"></a>
                 </div>
 
                 <ul class="ul-navigator">
                     <li>
-                        <a href="#">Heroku Products <i class="las la-angle-down"></i></a>
+                        <a href="#"> Products <i class="las la-angle-down"></i></a>
                         
                     </li>
 
@@ -58,7 +58,7 @@
                         <i class="las la-search"></i>
                     </form>
 
-                    <a href="#" class="log-in" >Login in</a>
+                    <a href="#" class="log-in" >Log in</a>
 
                     <span> or </span>
 
@@ -82,8 +82,15 @@
     </header>
 
     <main>
-
+    <div class="main-container-cards">
+        <div class="wrapper">
+            <div class="category-label">
+                <h5 class="text-dark">Heroku Featured Buttons</h5>
+            </div>
+        </div>    
+    </div>
     </main>
+     
 
     <footer>
 
