made a div with the wrapper class corrected the appearance and made an information block in the wrapper

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="search">
 
                     <form class="search-form">
-                        <input type="text" class="search-button" placeholder="Search Elements">
+                        <input type="text" class="search-input" placeholder="Search Elements">
                         <i class="las la-search"></i>
                     </form>
 
