--- a/index.html
+++ b/index.html
@@ -85,8 +85,23 @@
       <div class="main-container-cards">
         <div class="wrapper">
           <div class="category-label">
-            <h5 class="text-dark">Heroku Featured Buttons</h5>
-            <p>(Displaying <strong>1 – 12 </strong> of 36 Buttons)</p>
+            <div class="col-one">
+              <h5 class="text-dark">Heroku Featured Buttons</h5>
+              <p>(Displaying <strong>1 – 12 </strong> of 36 Buttons)</p>
+            </div>
+
+            <div class="col-two">
+              <label class="label-main">Sort Buttons by:</label>
+
+              <div class="custom-select">
+                <div class="selected-item">Popularity</div>
+                <div class="options">
+                  <div class="option" data-value="option1">Popularity</div>
+                  <div class="option" data-value="option2">Newest</div>
+                  <div class="option" data-value="option3">Name</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
