made a main cards

--- a/index.html
+++ b/index.html
@@ -93,13 +93,471 @@
             <div class="col-two">
               <label class="label-main">Sort Buttons by:</label>
 
-              <div class="custom-select">
-                <div class="selected-item">Popularity</div>
-                <div class="options">
-                  <div class="option" data-value="option1">Popularity</div>
-                  <div class="option" data-value="option2">Newest</div>
-                  <div class="option" data-value="option3">Name</div>
+              <select id="mySelect">
+                <option value="1">Populatiry</option>
+                <option value="2">Newest</option>
+                <option value="3">Name</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="wrapper">
+          <div class="down-cards-main">
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
                 </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card-dowm">
+              <div class="brand">
+                <div class="brand-author">
+                  <img src="assets/authorImg.png" alt="author-icon" />
+                  <span>author</span>
+                </div>
+                <h6>Name Project</h6>
+                <div class="div-cards-line"></div>
+                <p>Description Author</p>
+              </div>
+              <div class="div-stats">
+                <ul>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-arrow-alt-circle-up"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <span class="stats-icon"
+                      ><i class="las la-code-branch"></i
+                    ></span>
+                    <span>???</span>
+                  </li>
+                  <li class="li-cards">
+                    <div class="space-div">
+                      <i class="las la-arrow-alt-circle-up"></i>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -110,4 +568,8 @@
     <footer></footer>
   </body>
   <script src="index.js"></script>
+  <script
+    src="https://kit.fontawesome.com/d136c63d3e.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
