make a selector cards in down main

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-        <div class="wrapper">
+        <div class="wrapper-card">
           <div class="down-cards-main">
             <div class="card-dowm">
               <div class="brand">
@@ -560,9 +560,33 @@
                 </ul>
               </div>
             </div>
+            <!-- {{{}}} -->
+            <div class="select-cards-box">
+              <span class="box-down-main-one">
+                <button class="first-buttons">First</button>
+                <button class="first-buttons">Prev</button>
+              </span>
+              <span class="span-text-down-main">Page 1 of 3</span>
+              <span class="box-down-main-two">
+                <button class="last-buttons">Next</button>
+                <button class="last-buttons">Last</button>
+              </span>
+            </div>
           </div>
         </div>
       </div>
+
+      <!-- <div class="select-cards-box">
+        <span class="box-down-main-one">
+          <button class="first-buttons">First</button>
+          <button class="first-buttons">Prev</button>
+        </span>
+        <span class="span-text-down-main">Page 1 of 3</span>
+        <span class="box-down-main-two">
+          <button class="last-buttons">Next</button>
+          <button class="last-buttons">Last</button>
+        </span>
+      </div> -->
     </main>
 
     <footer></footer>
